[package]
name         = "meta-signal-repository-ledger"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
description  = "MetaSignal contract for repository-ledger authority and configuration."
publish      = false

[lib]
name = "meta_signal_repository_ledger"
path = "src/lib.rs"

[features]
default   = []
nota-text = []

[dependencies]
nota-next                = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
rkyv                     = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame             = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-repository-ledger = { git = "https://github.com/LiGoldragon/signal-repository-ledger", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
